# xno

./: .gitignore  pyproject.toml
xno/: config.py
xno/backtest/: common.py  vn_stocks.py
xno/data2/: __init__.py  external.py  provider.py
xno/data2/data/: db.py  ohlcv.py  order_book.py
xno/data2/db/: ohlcv.py  order_book.py
xno/data2/docs/: __init__.py  const.py  decorator.py  extractor.py
xno/data2/entity/: __init__.py  base.py  fundamental.py  market_info.py  ohlcv.py  order_book_depth.py  resolution.py  stock_info.py  stock_price_board.py  trade_tick.py  type.py
xno/data2/fundamental/: __init__.py  dataframe.py  db.py  external.py  provider.py  store.py
xno/data2/fundamental/entity/: __init__.py  balance_sheet.py  base.py  basic_info.py  cash_flow.py  data_quality.py  income_statement.py  period.py  price_volume.py  ratio.py
xno/data2/fundamental/exernal/: __init__.py  base.py  vnstock.py  wi.py
xno/data2/fundamental/store/: __init__.py  balance_sheet.py  basic_info.py  cash_flow.py  income_statement.py  ratio.py
xno/data2/store/: db.py  market_info.py  ohlcv.py  order_book_depth.py  provider.py  quote_tick.py  stock_info.py  stock_price_board.py  trade_tick.py
xno/data2/technical/: __init__.py  external.py  l2.py  provider.py
xno/data2/technical/entity/: __init__.py  ohlcv.py  order_book_depth.py  price_volume.py  quote_tick.py  (+2 more)
xno/data2/test/: test_connectors.py  test_ohlcv.py  test_order_book.py  test_order_book_depth.py  test_order_book_history.py  test_provider.py
xno/models/: tp.py
xno/runner/: base_runner.py  vnstock_runner.py
(+45 files in other folders)
