[project]
name = "xno"
version = "0.1.1"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=6.2.1",
    "celery>=5.5.3",
    "confluent-kafka>=2.11.1",
    "dotenv>=0.9.9",
    "duckdb>=1.4.3",
    "ipython>=9.6.0",
    "msgspec>=0.20.0",
    "orjson>=3.11.4",
    "pandas>=2.3.2",
    "plotly>=6.3.1",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.3",
    "quantstats>=0.0.77",
    "readerwriterlock>=1.0.9",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.67.1",
    "vnstock>=3.2.6",
]
